# django-bootstrap-template

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.txt  LICENSE  README.md  cookiecutter.json  requirements.txt
.dependabot/: config.yml
.github/: FUNDING.yml  dependabot.yml
CHANGELOG/: 2020-08-04__Django_3.1.md  2020-08-14__bells_and_whistles.md  2020-08-17__Dependabot_housekeeping.md  2020-09-01__Django_security_release_311.md  2021-04-20__Django_32_and_overhauls.md  2021-09-08__dependency_bumps.md
hooks/: post_gen_project.py
{{cookiecutter.directory_name}}/: manage.py  requirements.txt
{{cookiecutter.project_slug}}/: LICENSE  README.md  README.rst  dev-requirements.txt  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
{{cookiecutter.project_slug}}/base_objects/: __init__.py  apps.py  managers.py  models.py
{{cookiecutter.project_slug}}/static/css/: app.css
{{cookiecutter.project_slug}}/templates/: base.html  template_of_templates.html
{{cookiecutter.project_slug}}/templates/widgets/: base_footer.html  base_navbar.html  welcome_wagon.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/core/: asgi.py  managers.py  models.py  settings.py  typing.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/: base.html  template_of_templates.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/widgets/: welcome_wagon.html
(+16 files in other folders)
