[metadata]
description-file = README.md

[flake8]
# Config adjusted to work with Black formatting:
# https://ljvmiranda921.github.io/notebook/2018/06/21/precommits-using-black-and-flake8/#flake8-checker
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 120
# Exclude some things we don't want flake8 checking, such as the git repo, docs, and virtual environments
# (GitHub Codespaces use a pythonenvXY directory at the project root).
exclude =
    .git
    docs
    .venv
    pythonenv*
max-complexity = 18
select = B,C,E,F,W,T4,B9

[tool:pytest]
DJANGO_SETTINGS_MODULE = {{ cookiecutter.project_slug }}.core.settings
